# kestrel

./: .gitignore  CHANGELOG.md  LICENSE.md  PERFORMANCE.md  README.md  README_refiner.md  RELEASE.md  old_refiner.md  pyproject.toml  return_base64_plan.md  seg_repl.py  segmentation_return_bitmaps_plan.md
docs/: cutedsl.md  jetson.md  pipelined-decoding-design.md  prefix-caching.md
examples/: benchmark_decode_scaling.py  benchmark_http_server.py  benchmark_scheduler.py  calibrate_kv_fp8.py  compare_cropping_methods.py  compare_text.py  compare_vision.py  inspect_kv.py  probe_tau.py  profile_decode_phases.py  profile_prefill_phases.py  repro_stream_race.py  test_scattermoe_cuda_graph.py
kestrel/: __init__.py  config.py  device.py  engine.py  head_refiner.py  head_seg_refiner.py  hqsam_head_refiner.py  hqsam_refiner.py  kv_cache.py  legacy_refiner.py  main.py  model_download.py  photon.py  refiner.py  sam_head_refiner.py  seg_refiner.py
kestrel-kernels/: .gitignore  CMakeLists.txt  README.md  RELEASE.md  pyproject.toml
kestrel-kernels/benchmarks/: bench_activation.py  bench_cute_moe.py  bench_flash_attn.py  bench_fp8_quant.py  bench_fp8_quant_cute.py  bench_fused_linear_residual.py  bench_fused_mlp.py  bench_gelu_residual_cute.py  bench_kv_cache_write.py  bench_layernorm_cuda.py  bench_moe_align.py  bench_moe_sum.py  bench_rotary_embedding.py  bench_tau_tail.py  bench_topk.py
kestrel-kernels/csrc/fp8_quant/: kernel.cu
kestrel-kernels/csrc/tau_tail/: kernel.cu
kestrel-kernels/python/kestrel_kernels/: __init__.py  cute_moe.py  moe_align_cute.py  topk.py
kestrel-kernels/python/kestrel_kernels/configs/: cute_moe_E64_H2048_I1024_bf16_sm90.json  cute_moe_E64_H2048_I1024_fp8_sm90.json
kestrel-kernels/python/kestrel_kernels/cute_moe/: __init__.py  config.py  cute_moe_bf16_sm90_warp.py  cute_moe_bf16_sm90_wgmma.py  cute_moe_fp8_sm90_warp.py  cute_moe_fp8_sm90_wgmma.py  cute_moe_w8a16_sm90_warp.py  dispatch.py  utils.py
kestrel-kernels/python/kestrel_kernels/flash_attn/cute/: blackwell_helpers.py  block_info.py  block_sparse_utils.py  compute_block_sparsity.py  copy_utils.py  flash_bwd.py  flash_bwd_postprocess.py  flash_bwd_preprocess.py  flash_bwd_sm100.py  flash_bwd_sm90.py  flash_decode_sm90.py  flash_decode_sm90_persistent_fused.py  flash_fwd.py  flash_fwd_combine.py  flash_fwd_sm100.py  interface.py  mask.py  mask_definitions.py  named_barrier.py  pack_gqa.py  paged_kv.py  pipeline.py  softmax.py  tile_scheduler.py  utils.py
kestrel-kernels/python/kestrel_kernels/fp8_quant_cute/: dispatch.py  kernel.py
kestrel-kernels/python/kestrel_kernels/gelu_residual/: kernel.py
kestrel-kernels/python/kestrel_kernels/moe_align/: kernel.py
kestrel-kernels/python/kestrel_kernels/topk/: kernel.py
kestrel-kernels/scripts/: build_manylinux_wheels.sh  precompile_cute_moe.py  precompile_moe_align.py  precompile_topk.py
kestrel-kernels/scripts/precompile/: __init__.py  __main__.py  cute_moe.py  flash_attn.py  fp8_quant.py  gelu_residual.py  moe_align.py  topk.py  utils.py
kestrel-kernels/tests/: __init__.py  conftest.py  test_flash_attn_decode.py  test_flash_attn_decode_persistent_split.py  test_flash_attn_prefill_fp8.py  test_fp8_quant_cute.py  test_fused_linear_residual.py  test_fused_mlp.py  test_gelu_residual_cute.py  test_layernorm_cuda.py  test_moe_align.py  test_moe_sum.py  test_rotary_embedding.py  test_tau_tail.py  test_topk.py
kestrel-native/: Cargo.toml  pyproject.toml
kestrel-native/src/: lib.rs
kestrel/cloud/: adapter_provider.py
kestrel/dense_lora/: __init__.py  common.py  torch_backend.py
kestrel/engine/: __init__.py  _types.py  core.py  executor.py  handle.py  single_pass.py  streaming.py
kestrel/fused_moe/: README.md  __init__.py  _direct.py  _lora_triton_kernels.py  kernels.py  lora_kernels.py  module.py  routing.py  weights.py
kestrel/models/: __init__.py  moondream_text.py  protocols.py  registry.py
kestrel/moondream/: __init__.py  config.py  decode_slot.py  flashinfer.py  image_crops.py  image_preprocessor.py  layers.py  lora.py  lora_workspace.py  model.py  moe.py  region.py  rope.py  runtime.py  text.py  vision.py  weights.py
kestrel/ops/: __init__.py  fused_moe_cute.py  jit.py  reshape_and_cache.py  rope.py
kestrel/prefix_cache/: __init__.py  base.py  eviction.py  namespace.py  radix_cache.py
kestrel/runtime/: __init__.py  decode_graph.py  protocol.py  sampling.py  spec.py  state.py  tokens.py
kestrel/scattermoe/: __init__.py  mlp.py  parallel_experts.py  workspace.py
kestrel/scheduler/: README.md  __init__.py  pipeline.py  queues.py  sampling.py  scheduler.py  spatial.py  tokens.py  transfer.py  types.py
kestrel/server/: http.py
kestrel/skills/: __init__.py  base.py  caption.py  chat.py  detect.py  point.py  query.py  (+1 more)
scripts/: chartqa_eval.py  grid_search_cute_moe.py  moondream_dflash_smoke.py  post_process.py  profile_decode.py  profile_sampling.py  profile_vision_encoder.py  quantize_moe_fp8.py  seg_repl.py  seg_repl_hqsam.py  serve_http.py  trace_inference.py
tests/: test_activation.py  test_append_prefill.py  test_autoregressive_executor.py  test_chat_skill.py  test_config.py  test_decode_graph_manager.py  test_dense_lora.py  test_device.py  test_engine.py  test_engine_runtime_injection.py  test_fa3_paged_decode.py  test_fa3_paged_decode_fp8.py  test_fa3_paged_decode_persistent_split.py  test_fa3_paged_prefill_fp8.py  test_fused_linear_residual.py  test_fused_mlp.py  test_fused_moe_cute.py  test_http_segment_return_base64.py  test_kernels_megakernel_api.py  test_kv_cache_write.py  test_kv_pool.py  test_layernorm_cuda.py  test_model_handle.py  test_model_registry.py  test_model_stream.py  test_moe_align.py  test_moe_align_cute.py  test_moe_lora.py  test_moe_sum.py  test_moondream_tokenizer.py  test_multi_model.py  test_packed_buffer.py  test_page_table.py  test_photon.py  test_point_spatial_refs.py  test_query_skill.py  test_rotary_embedding.py  test_seg_refiner_mask_encoding.py  test_segment_request_flags.py  test_segment_skill_mask_outputs.py  (+9 more)
triton/: README.md  client.py
triton_server/: README.md  client.py
(+86 files in other folders)
