[project]
name = "kestrel"
version = "0.3.1"
description = "a fast, efficient inference engine for moondream"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "torch>=2.4",
    "tokenizers>=0.15",
    "safetensors>=0.4",
    "torch-c-dlpack-ext>=0.1.3",
    "httpx>=0.27",
    "kestrel-native==0.1.5",
    "kestrel-kernels==0.3.2",
    "huggingface-hub>=0.20",
]

[tool.uv]
# kestrel-kernels ships cp310/311/312/313/314 wheels for Linux x86_64 /
# aarch64, Windows AMD64, and macOS arm64 (tagged ``macosx_13_0_arm64``,
# Ventura+). Scope uv's environment universe to those, so unsupported
# combos (macOS x86_64) fail fast at ``uv sync`` with "platform not
# compatible" instead of late with "no compatible distribution".
environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'win32'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[tool.setuptools.packages.find]
include = ["kestrel", "kestrel.*"]
exclude = ["tests", "tests.*"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
eval = [
    "datasets>=3.0",
    "tqdm>=4.66",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
