[project]
name = "kestrel"
version = "0.4.1"
description = "a fast, efficient inference engine for moondream"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "torch>=2.4",
    "tokenizers>=0.15",
    "safetensors>=0.4",
    "torch-c-dlpack-ext>=0.1.3",
    "httpx>=0.27",
    "kestrel-native==0.1.5",
    "kestrel-kernels==0.4.6",
    "huggingface-hub>=0.20",
]

[tool.setuptools.packages.find]
include = ["kestrel", "kestrel.*"]
exclude = ["tests", "tests.*"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
eval = [
    "datasets>=3.0",
    "tqdm>=4.66",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
